# soroban-amm

./: .editorconfig  .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pr.md  rustfmt.toml
benches/: Cargo.toml  baseline.json
benches/src/: main.rs
contracts/amm/: Cargo.toml
contracts/amm-fuzz/: Cargo.toml
contracts/amm-fuzz/src/: lib.rs
contracts/amm-sdk/: Cargo.toml
contracts/amm-sdk/src/: client.rs  events.rs  lib.rs  types.rs  version_test.rs
contracts/amm-sdk/src/examples/: basic_swap.rs  mod.rs
contracts/amm/src/: lib.rs  prop_tests.rs  snapshots.rs  tests.rs
contracts/amm/test_snapshots/prop_tests/: test_accept_admin_emits_event.1.json  test_add_liquidity_panics_when_paused.1.json  test_emergency_withdraw.1.json  test_emergency_withdraw_requires_admin_auth.1.json  test_flash_loan_failed_repayment_panics.1.json  test_flash_loan_success_with_repayment.1.json  test_get_accrued_fees_matches_swap_accumulation.1.json  test_get_accrued_fees_zero_before_swaps.1.json  test_get_fee_info.1.json  test_get_info_returns_admin_and_fee_recipient.1.json  test_pause_blocks_read_only_functions_remain_available_then_unpause_succeeds.1.json  test_pause_requires_admin_auth.1.json  test_propose_admin_emits_event.1.json  test_protocol_fee_accrual.1.json  test_reaccrual_after_withdrawal.1.json  test_remove_liquidity_panics_when_paused.1.json  test_simulate_swap_price_impact_bps.1.json  test_swap_panics_when_paused.1.json  test_unpause_requires_admin_auth.1.json  test_withdraw_resets_accrued.1.json
contracts/amm/test_snapshots/tests/: bench_add_liquidity_cost.1.json  bench_swap_cost.1.json  test_add_and_swap.1.json  test_add_liquidity_slippage_panics.1.json  test_fee_accrues_to_reserves.1.json  test_fee_bps_max_succeeds.1.json  test_fee_bps_zero_succeeds.1.json  test_get_amount_in_max_fee_does_not_panic.1.json  test_get_amount_in_overflow.1.json  test_get_amount_in_round_trip.1.json  test_get_amount_out_matches_swap.1.json  test_imbalanced_deposit_uses_minimum_ratio.1.json  test_initialize_stores_admin.1.json  test_initialize_twice_panics.1.json  test_invalid_fee_panics.1.json  test_large_reserves_add_liquidity_no_overflow.1.json  test_large_reserves_get_amount_in_round_trip.1.json  test_large_reserves_price_ratio_no_overflow.1.json  test_large_reserves_swap_no_overflow.1.json  test_lp_token_transfer_enables_remove.1.json  test_min_shares_exact_succeeds.1.json  test_min_shares_off_by_one_panics.1.json  test_multiple_lps.1.json  test_partial_remove_liquidity_leaves_correct_reserves.1.json  test_price_ratio.1.json  test_price_ratio_errors_on_empty_pool.1.json  test_price_ratio_panics_on_empty_pool.1.json  test_remove_liquidity.1.json  test_remove_liquidity_emits_event.1.json  test_remove_liquidity_one_sided.1.json  test_remove_liquidity_one_sided_slippage_fails.1.json  test_remove_liquidity_slippage_panics.1.json  test_sequential_swaps_invariant.1.json  test_set_protocol_fee_works_after_initialize.1.json  test_swap_b_to_a.1.json  test_swap_emits_token_out_in_event_payload.1.json  test_swap_exact_out_invalid_token_panics.1.json  test_swap_exact_out_normal_path.1.json  test_swap_exact_out_paused_panics.1.json  test_swap_exact_out_round_trip_consistent_with_get_amount_in.1.json  (+6 more)
contracts/batch_auction/: Cargo.toml
contracts/batch_auction/src/: lib.rs
contracts/batch_auction/test_snapshots/tests/: test_amm_order_still_defaults_to_amm_pool_type.1.json  test_cancel_order_refunds_tokens.1.json  test_multiple_traders_in_same_batch.1.json  test_quote_and_settle_route_to_best_venue.1.json  test_settle_before_window_reverts.1.json  test_settlement_with_exactly_max_orders_succeeds.1.json  test_submit_and_settle.1.json  test_submit_and_settle_cl_order.1.json  test_submit_beyond_cap_returns_batch_full.1.json
contracts/cl_position_nft/: Cargo.toml
contracts/cl_position_nft/src/: lib.rs
contracts/cl_position_nft/test_snapshots/tests/: initialize_stores_global_state_once.1.json  initialize_twice_returns_already_initialized.1.json  owned_tokens_defaults_to_empty_persistent_vec.1.json
contracts/concentrated_liquidity/: Cargo.toml
contracts/concentrated_liquidity/src/: lib.rs  math.rs  tick_bitmap.rs
contracts/concentrated_liquidity/test_snapshots/test/: burn_position_emits_burn_pos_event_with_returned_amounts.1.json
contracts/concentrated_liquidity/test_snapshots/test_fee_collection/: burn_after_collect_returns_principal_not_fees.1.json
contracts/concentrated_liquidity/test_snapshots/test_new_features/: average_tick_from_two_observes_matches_expected_price.1.json  get_positions_mint_two_close_one.1.json  modify_position_increases_liquidity_settles_fees_and_reuses_storage.1.json  observe_zero_returns_current_cumulative.1.json  quote_position_matches_mint_deduction.1.json  tick_cumulative_advances_across_swaps.1.json
contracts/concentrated_liquidity/test_snapshots/test_new_tick_features/: bitmap_correctly_tracks_multiple_positions.1.json  get_liquidity_net_at_tick_correct_after_mint.1.json  get_liquidity_net_at_tick_returns_zero_for_uninitialised.1.json  get_tick_info_returns_correct_values_after_mint.1.json  get_tick_info_returns_error_for_uninitialized_tick.1.json  (+11 more)
contracts/factory/: Cargo.toml  build.rs
contracts/factory/src/: amm.wasm  lib.rs  token.wasm
contracts/governance/: Cargo.toml
contracts/governance/proptest-regressions/: lib.txt
contracts/governance/src/: lib.rs
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: flash_loan_integration_test.rs  lib.rs  memory_leak_detection_test.rs  multisig_emergency_withdraw_test.rs  upgrade_integration_test.rs
contracts/integration-tests/tests/: v2_to_v3_migration.rs
contracts/oracle_aggregator/: Cargo.toml
contracts/oracle_aggregator/src/: lib.rs  test.rs
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs
contracts/twal_consumer/: Cargo.toml
contracts/twal_consumer/src/: lib.rs
contracts/v2_to_v3_migration/: Cargo.toml
contracts/v2_to_v3_migration/src/: lib.rs
(+1555 files in other folders)
