[workspace]
resolver = "2"
members = [
  "contracts/amm",
  "contracts/token",
  "contracts/concentrated_liquidity",
  "contracts/amm-fuzz",
  "contracts/v2_to_v3_migration",
  "contracts/integration-tests",
]

[workspace.dependencies]
soroban-sdk = { version = "21.7.7" }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
