[workspace]
resolver = "2"
members = [
  "contracts/amm",
  "contracts/amm-sdk",
  "contracts/concentrated_liquidity",
  "contracts/factory",
  "contracts/router",
  "contracts/batch_router",
  "contracts/batch_auction",
  "contracts/token",
  "contracts/reserve_manager",
  "contracts/amm-fuzz",
  "contracts/twap_consumer",
  "contracts/twal_consumer",
  "contracts/incentive_campaigns",
  "contracts/dex_aggregator",
  "contracts/governance",
  "contracts/staking",
  "contracts/integration-tests",
  "contracts/oracle_aggregator",
  "contracts/cl_position_nft",
  "contracts/v2_to_v3_migration",
  "contracts/pol_vesting",
  "benches",
]
default-members = [
  "contracts/amm",
  "contracts/amm-sdk",
  "contracts/concentrated_liquidity",
  "contracts/factory",
  "contracts/token",
  "contracts/reserve_manager",
  "contracts/twap_consumer",
  "contracts/twal_consumer",
  "contracts/incentive_campaigns",
  "contracts/governance",
  "contracts/staking",
  "contracts/oracle_aggregator",
  "contracts/v2_to_v3_migration",
  "contracts/pol_vesting",
]

[workspace.dependencies]
soroban-sdk = { version = "21.7.7" }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
