[workspace]
resolver = "2"
members = [
  "contracts/amm",
  "contracts/concentrated_liquidity",
  "contracts/factory",
  "contracts/router",
  "contracts/token",
  "contracts/factory",
  "contracts/twap_consumer",
  "contracts/twal_consumer",
  "contracts/governance",
  "contracts/staking",
]

[workspace.dependencies]
soroban-sdk = { version = "21.7.7" }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
