[package]
name = "amm-fuzz"
version = "0.1.0"
edition = "2021"

# This is a test-only crate; it produces no WASM artifact.
[lib]
crate-type = ["lib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
token = { path = "../token", features = ["testutils"] }
amm = { path = "../amm", features = ["testutils"] }
proptest = "1"
