[package]
name = "soroban-amm-sdk"
version = "0.1.0"
edition = "2021"
description = "Type-safe Rust SDK for the Soroban AMM contracts"
license = "MIT"
repository = "https://github.com/promisszn/soroban-amm"
keywords = ["soroban", "stellar", "amm", "defi", "sdk"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[lib]
name = "soroban_amm_sdk"
crate-type = ["cdylib", "rlib"]

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
amm           = { path = "../amm",           features = ["testutils"] }
token         = { path = "../token",         features = ["testutils"] }
