[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils", "token/testutils"]
library = []

[dependencies]
soroban-sdk = { workspace = true }
soroban-amm-sdk = { path = "../amm-sdk" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
token = { path = "../token", features = ["testutils"] }
proptest = "1"
