[package]
name = "concentrated_liquidity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils", "token/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
token = { path = "../token" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
token = { path = "../token", features = ["testutils"] }
