[package]
name = "concentrated_liquidity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]
library = []

[dependencies]
soroban-sdk = { workspace = true }
soroban-amm-sdk = { path = "../amm-sdk" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
token = { path = "../token", features = ["testutils"] }
amm   = { path = "../amm",   features = ["testutils"] }
