[package]
name = "factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
testutils = ["soroban-sdk/testutils", "amm/testutils", "token/testutils", "concentrated_liquidity/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
amm = { path = "../amm", features = ["testutils"] }
token = { path = "../token", features = ["testutils"] }
governance = { path = "../governance", features = ["testutils"] }
concentrated_liquidity = { path = "../concentrated_liquidity", features = ["testutils"] }

