[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# This crate contains no library — it is purely a test harness.
[lib]
name = "integration_tests"
path = "src/lib.rs"

[features]
legacy-integration-matrix = []

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
amm              = { path = "../amm",              features = ["testutils"] }
token            = { path = "../token",            features = ["testutils"] }
factory          = { path = "../factory",          features = ["testutils"] }
twap-consumer    = { path = "../twap_consumer",    features = ["testutils"] }
twal-consumer    = { path = "../twal_consumer",    features = ["testutils"] }
dex-aggregator   = { path = "../dex_aggregator",   features = ["testutils"] }
incentive-campaigns = { path = "../incentive_campaigns", features = ["testutils"] }
governance       = { path = "../governance",       features = ["testutils"] }
concentrated_liquidity = { path = "../concentrated_liquidity", features = ["testutils"] }
v2_to_v3_migration   = { path = "../v2_to_v3_migration",   features = ["testutils"] }

[[test]]
name = "v2_to_v3_migration"
path = "tests/v2_to_v3_migration.rs"
