[package]
name = "oracle-aggregator"
version = "0.1.0"
edition = "2021"
description = "Soroban-native multi-source price oracle aggregator (#304)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
