[package]
name = "twal-consumer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils", "amm/testutils", "token/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
amm = { path = "../amm", features = ["testutils"] }
token = { path = "../token", features = ["testutils"] }
